--- a/templates/match.html
+++ b/templates/match.html
@@ -12,14 +12,14 @@
             <figure>
                 <img src={{get_gravatar_url(match.player11.photo)}}>
                 <figcaption>
-                    {{match.player11.get_full_name()}}
+                    <a href="{{ url_for('profile', id_player=match.player11.id_user)}}">{{match.player11.get_full_name()}}</a>
                 </figcaption>
             </figure>
             {% if match.player12 %}
             <figure>
                 <img src={{get_gravatar_url(match.player12.photo)}}>
                 <figcaption>
-                    {{match.player12.get_full_name()}}
+                    <a href="{{ url_for('profile', id_player=match.player12.id_user)}}">{{match.player12.get_full_name()}}</a>
                 </figcaption>
             </figure>
             {% endif %}
@@ -29,14 +29,14 @@
             <figure>
                 <img src={{get_gravatar_url(match.player21.photo)}}>
                 <figcaption>
-                    {{match.player21.get_full_name()}}
+                    <a href="{{ url_for('profile', id_player=match.player21.id_user)}}">{{match.player21.get_full_name()}}</a>
                 </figcaption>
             </figure>
             {% if match.player22 %}
             <figure>
                 <img src={{get_gravatar_url(match.player22.photo)}}>
                 <figcaption>
-                    {{match.player22.get_full_name()}}
+                    <a href="{{ url_for('profile', id_player=match.player22.id_user)}}">{{match.player22.get_full_name()}}</a>
                 </figcaption>
             </figure>
             {% endif %}
