--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -28,7 +28,8 @@
             {% endif %}
             <td>
                 <img src="{{get_gravatar_url(user.photo)}}">
-                {{user.get_full_name()}}
+                
+                <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.get_full_name()}}</a>
             </td>
             <td>{{user.ranking}}</td>
             {% if user.number_of_match != 0 %}
