new attributes in profile page

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -8,7 +8,7 @@
     <thead>
         <tr>
             <th>Color</th>
-            <th>Team</th>
+            <th>Player</th>
             <th>Elo</th>
             <th>Victories</th>
             <th>Defeats</th>
