--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,39 @@
 {% extends "layout.html" %}
 {% block body %} 
 
-<img src={{get_gravatar_url(user.photo)}}>
-{{user.get_full_name()}}
+<h2>{{user.get_full_name()}}</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Elo</th>
+            <th>Victories</th>
+            <th>Defeats</th>
+            <th>Ratio</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <img src="{{get_gravatar_url(user.photo)}}">
+            </td>
+            <td>{{user.ranking}}</td>
+            {% if user.number_of_match != 0 %}
+            <td>{{user.nb_victories}}</td>
+            <td>{{user.nb_defeats}}</td>
+            <td>{{100*(user.nb_victories/user.number_of_match)| round(2)}}
+            <img src="{{ url_for('svg_victory', id_player=user.id_user)}}"></img>
+            </td>
+            {% else %}
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            {% endif %}
+        </tr>
+    </tbody>
+</table>
+
 
 {% endblock %}
