--- a/templates/profile.html
+++ b/templates/profile.html
@@ -37,8 +37,7 @@
         <p>
             <b>Best Teammate(s) : </b>
             {% for user in best_teammate %}
-            {{user.name}}
-            {{user.id_user}}
+            <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.get_full_name()}}</a>
             {% else %}
             No best Teammate.
             {% endfor %}
@@ -47,8 +46,7 @@
         <p>
             <b>Worst Teammate(s) : </b>
             {% for user in worst_teammate %}
-            {{user.name}}
-            {{user.id_user}}
+            <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.get_full_name()}}</a>
             {% else %}
             No Worst Teammate.
             {% endfor %}
@@ -56,8 +54,7 @@
         <p>
             <b>Nemesis : </b>
             {% for user in nemesis %}
-            {{user.name}}
-            {{user.id_user}}
+            <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.get_full_name()}}</a>
             {% else %}
             No nemesis.
             {% endfor %}
