--- a/templates/ranking.css
+++ b/templates/ranking.css
@@ -1,20 +1,20 @@
-table tbody {
+table {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-table tbody td, table tbody th {
+table td, table th {
     border: 1px solid #ddd;
     text-align: left;
     padding: 8px;
 }
 
-table tbody tr:nth-child(even){background-color: #f2f2f2}
+table tr:nth-child(even){background-color: #f2f2f2}
 
-table tbody tr:hover {background-color: #ddd;}
+table tr:hover {background-color: #ddd;}
 
-table tbody th {
+table th {
     padding-top: 12px;
     padding-bottom: 12px;
     background-color: #4CAF50;
