--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,12 +2,36 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{url_for('static', filename='ranking.css')}}">
+<script>
+    window.onload = on_load_ranking;
+    
+    function on_load_ranking(){
+        var trs = document.getElementsByTagName('tr');
+        for(var i = 1;i <trs.length; i++){
+            console.log(trs[i].childNodes[1].firstChild.data);
+            if(trs[i].childNodes[1].firstChild.data == "Green"){
+                trs[i].childNodes[1].style.backgroundColor = "greenyellow";
+            }
+            else if(trs[i].childNodes[1].firstChild.data == "Red"){
+                trs[i].childNodes[1].style.backgroundColor = "red";
+            }
+            else{
+
+            }
+            trs[i].childNodes[1].firstChild.data = i+"";
+        }
+        
+    }
+</script>
 {% endblock %}
 
 {% block body %} 
 
 {% if users %}
-<a href="{{ url_for('ranking_graph')}}">Watch monthly ranking evolution</a>
+<h1>
+<a href="{{ url_for('ranking_graph')}}">Watch monthly ranking evolution !</a>
+</h1>
+
 <table>
     <thead>
         <tr>
@@ -40,10 +64,11 @@
             <td>{{user.nb_victories}}</td>
             <td>{{user.nb_defeats}}</td>
             <td>{{100*(user.nb_victories/user.number_of_match)| round(2)}}
+<!--
             <img src="{{ url_for('svg_victory', id_player=user.id_user)}}"></img>
+-->
             </td>
             {% else %}
-            <td>-</td>
             <td>-</td>
             <td>-</td>
             <td>-</td>
