style for ranking graph

--- a/templates/ranking_graph.html
+++ b/templates/ranking_graph.html
@@ -3,9 +3,15 @@
 {% block head %}
     <script type="text/javascript" src="http://kozea.github.com/pygal.js/javascripts/svg.jquery.js"></script>
     <script type="text/javascript" src="http://kozea.github.com/pygal.js/2.0.x/pygal-tooltips.js"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='ranking_graph.css')}}">
 {% endblock %}
 
 {% block body %}
+
+<h1>
+<a href="{{ url_for('ranking')}}">Go back to ranking !</a>
+</h1>
+
 
     {{ line_chart|safe }}
 
