number of victories/defeats for teammates and nemesis

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,6 +34,7 @@
             {% else %}
             No best Teammate.
             {% endfor %}
+            <b>({{best_teammate_coeff}} team victories)</b> 
         </p>
         
         <p>
@@ -43,6 +44,7 @@
             {% else %}
             No Worst Teammate.
             {% endfor %}
+            <b>({{worst_teammate_coeff}} team defeat(s))</b> 
         </p>
         <p>
             <b>Nemesis : </b>
@@ -51,6 +53,7 @@
             {% else %}
             No nemesis.
             {% endfor %}
+            <b>({{nemesis_coeff}} defeat(s)))</b> 
         </p>
     </section>
     
