--- a/templates/match.html
+++ b/templates/match.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+
+{% block head %}
+<link rel="stylesheet" href="{{url_for('static', filename='match.css')}}">
+{% endblock %}
+
 {% block body %} 
 
 <h1>Matchs</h1>
