--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
 <article>
     <header>
         <h2>{{user.get_full_name()}}</h2>
+        <h3>{{user.nickname}}</h3>
     </header>
     
     <section>
