--- a/templates/profile.html
+++ b/templates/profile.html
@@ -62,40 +62,40 @@
         {% for match in matchs %}
         <article>
                 <h2>
-                    <time datetime ="{{ match.date }}">{{match.date}}</time>
+                    <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
                 </h2>
                 
                 <section>
-                    <h3>{{match.score_e1}}</h3>
+                    <h3>{{ match.score_e1 }}</h3>
                     <figure>
-                        <img src={{get_gravatar_url(match.player11.photo)}}>
+                        <img src={{ get_gravatar_url(match.player11.photo) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.player11.id_user)}}">{{match.player11.get_full_name()}}</a>
+                            <a href="{{ url_for('profile', id_player=match.player11.id_user) }}">{{ match.player11.get_full_name() }}</a>
                         </figcaption>
                     </figure>
                     {% if match.player12 %}
                     <figure>
-                        <img src={{get_gravatar_url(match.player12.photo)}}>
+                        <img src={{ get_gravatar_url(match.player12.photo) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.player12.id_user) }}">{{match.player12.get_full_name()}}</a>
+                            <a href="{{ url_for('profile', id_player=match.player12.id_user) }}">{{ match.player12.get_full_name() }}</a>
                         </figcaption>
                     </figure>
                     {% endif %}
                 </section>
                     
                 <section>
-                    <h3>{{match.score_e2}}</h3>
+                    <h3>{{ match.score_e2 }}</h3>
                     <figure>
-                        <img src={{get_gravatar_url(match.player21.photo)}}>
+                        <img src={{ get_gravatar_url(match.player21.photo) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.player21.id_user) }}">{{match.player21.get_full_name()}}</a>
+                            <a href="{{ url_for('profile', id_player=match.player21.id_user) }}">{{ match.player21.get_full_name() }}</a>
                         </figcaption>
                     </figure>
                     {% if match.player22 %}
                     <figure>
-                        <img src={{get_gravatar_url(match.player22.photo)}}>
+                        <img src={{ get_gravatar_url(match.player22.photo) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.player22.id_user) }}">{{match.player22.get_full_name()}}</a>
+                            <a href="{{ url_for('profile', id_player=match.player22.id_user) }}">{{ match.player22.get_full_name() }}</a>
                         </figcaption>
                     </figure>
                     {% endif %}
