--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -10,7 +10,7 @@
     <section>
         <figure>
             <h3>{{ team1[0].ranking }}</h3>
-            <img src={{get_gravatar_url(team1[0].photo)}}>
+            <img src={{get_gravatar_url(team1[0].email)}}>
             <figcaption>
                 {{ team1[0].get_full_name() }}
             </figcaption>
@@ -18,7 +18,7 @@
 
         <figure>
             <h3>{{ team1[1].ranking }}</h3>
-            <img src={{get_gravatar_url(team1[1].photo)}}>
+            <img src={{get_gravatar_url(team1[1].email)}}>
             <figcaption>
                 {{ team1[1].get_full_name() }}
             </figcaption>
@@ -28,7 +28,7 @@
     <section>
         <figure>
             <h3>{{ team2[0].ranking }}</h3>
-            <img src={{get_gravatar_url(team2[0].photo)}}>
+            <img src={{get_gravatar_url(team2[0].email)}}>
             <figcaption>
                 {{ team2[0].get_full_name() }}
             </figcaption>
@@ -36,7 +36,7 @@
 
         <figure>
             <h3>{{ team2[1].ranking }}</h3>
-            <img src={{get_gravatar_url(team2[1].photo)}}>
+            <img src={{get_gravatar_url(team2[1].email)}}>
             <figcaption>
                 {{ team2[1].get_full_name() }}
             </figcaption>
