--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -110,7 +110,7 @@
 <div id="players" style="display:table-cell; width:255px; height:250px; border:dashed 1px black;" ondragover="return false" ondrop="OnDropTarget(this, event);">
 {% for user in users %}
     <div id="divdrag{{user.id_user}}" class="div-drag" draggable="true" ondragstart="OnDragStart(this, event);">
-        <img src={{get_gravatar_url(user.photo)}} ondragstart="OnDragStart(this, event);">
+        <img src={{get_gravatar_url(user.email)}} ondragstart="OnDragStart(this, event);">
         <figcaption>
             <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.get_full_name()}}</a>
         </figcaption>
