--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
     </header>
     
     <section>
-        <p><img src="{{ get_gravatar_url(user.photo) }}"></p>
+        <p><img src="{{ get_gravatar_url(user.email) }}"></p>
     </section>
     
     {% if user.number_of_match != 0 %}
@@ -68,14 +68,14 @@
                 <section>
                     <h3>{{ match.score_e1 }}</h3>
                     <figure>
-                        <img src={{ get_gravatar_url(match.player11.photo) }}>
+                        <img src={{ get_gravatar_url(match.player11.email) }}>
                         <figcaption>
                             <a href="{{ url_for('profile', id_player=match.player11.id_user) }}">{{ match.player11.get_full_name() }}</a>
                         </figcaption>
                     </figure>
                     {% if match.player12 %}
                     <figure>
-                        <img src={{ get_gravatar_url(match.player12.photo) }}>
+                        <img src={{ get_gravatar_url(match.player12.email) }}>
                         <figcaption>
                             <a href="{{ url_for('profile', id_player=match.player12.id_user) }}">{{ match.player12.get_full_name() }}</a>
                         </figcaption>
@@ -86,14 +86,14 @@
                 <section>
                     <h3>{{ match.score_e2 }}</h3>
                     <figure>
-                        <img src={{ get_gravatar_url(match.player21.photo) }}>
+                        <img src={{ get_gravatar_url(match.player21.email) }}>
                         <figcaption>
                             <a href="{{ url_for('profile', id_player=match.player21.id_user) }}">{{ match.player21.get_full_name() }}</a>
                         </figcaption>
                     </figure>
                     {% if match.player22 %}
                     <figure>
-                        <img src={{ get_gravatar_url(match.player22.photo) }}>
+                        <img src={{ get_gravatar_url(match.player22.email) }}>
                         <figcaption>
                             <a href="{{ url_for('profile', id_player=match.player22.id_user) }}">{{ match.player22.get_full_name() }}</a>
                         </figcaption>
