--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -33,7 +33,7 @@
             <td>Invisible</td>
             {% endif %}
             <td>
-                <img src="{{ get_gravatar_url(user.photo) }}">
+                <img src="{{ get_gravatar_url(user.email) }}">
                 
                 <a href="{{ url_for('profile', id_player=user.id_user) }}">{{ user.get_full_name() }}</a>
             </td>
