--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -112,7 +112,7 @@
     <div id="divdrag{{user.id_user}}" class="div-drag" draggable="true" ondragstart="OnDragStart(this, event);">
         <img src={{get_gravatar_url(user.email)}} ondragstart="OnDragStart(this, event);">
         <figcaption>
-            <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.get_full_name()}}</a>
+            <a href="{{ url_for('profile', id_player=user.id_user)}}">{{user.full_name}}</a>
         </figcaption>
     </div>
 {% endfor %}
