--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 
 <article>
     <header>
-        <h2>{{user.get_full_name()}}</h2>
+        <h2>{{user.full_name}}</h2>
         <h3>{{user.nickname}}</h3>
     </header>
     
@@ -30,7 +30,7 @@
         <p>
             <strong>Best Teammate(s) : </strong>
             {% for user in best_teammate %}
-            <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.get_full_name()}}</a>
+            <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
             {% else %}
             No best Teammate.
             {% endfor %}
@@ -40,7 +40,7 @@
         <p>
             <strong>Worst Teammate(s) : </strong>
             {% for user in worst_teammate %}
-            <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.get_full_name()}}</a>
+            <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
             {% else %}
             No Worst Teammate.
             {% endfor %}
@@ -49,7 +49,7 @@
         <p>
             <strong>Nemesis : </strong>
             {% for user in nemesis %}
-            <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.get_full_name()}}</a>
+            <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
             {% else %}
             No nemesis.
             {% endfor %}
@@ -70,14 +70,14 @@
                     <figure>
                         <img src={{ get_gravatar_url(match.team_1_player_1.email) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_1_player_1.id_user) }}">{{ match.team_1_player_1.get_full_name() }}</a>
+                            <a href="{{ url_for('profile', id_player=match.team_1_player_1.id_user) }}">{{ match.team_1_player_1.full_name }}</a>
                         </figcaption>
                     </figure>
                     {% if match.team_1_player_2 %}
                     <figure>
                         <img src={{ get_gravatar_url(match.team_1_player_2.email) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_1_player_2.id_user) }}">{{ match.team_1_player_2.get_full_name() }}</a>
+                            <a href="{{ url_for('profile', id_player=match.team_1_player_2.id_user) }}">{{ match.team_1_player_2.full_name }}</a>
                         </figcaption>
                     </figure>
                     {% endif %}
@@ -88,14 +88,14 @@
                     <figure>
                         <img src={{ get_gravatar_url(match.team_2_player_1.email) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_2_player_1.id_user) }}">{{ match.team_2_player_1.get_full_name() }}</a>
+                            <a href="{{ url_for('profile', id_player=match.team_2_player_1.id_user) }}">{{ match.team_2_player_1.full_name }}</a>
                         </figcaption>
                     </figure>
                     {% if match.team_2_player_2 %}
                     <figure>
                         <img src={{ get_gravatar_url(match.team_2_player_2.email) }}>
                         <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_2_player_2.id_user) }}">{{ match.team_2_player_2.get_full_name() }}</a>
+                            <a href="{{ url_for('profile', id_player=match.team_2_player_2.id_user) }}">{{ match.team_2_player_2.full_name }}</a>
                         </figcaption>
                     </figure>
                     {% endif %}
