--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -12,7 +12,7 @@
             <h3>{{ team1[0].ranking }}</h3>
             <img src={{get_gravatar_url(team1[0].email)}}>
             <figcaption>
-                {{ team1[0].get_full_name() }}
+                {{ team1[0].full_name }}
             </figcaption>
         </figure>
 
@@ -20,7 +20,7 @@
             <h3>{{ team1[1].ranking }}</h3>
             <img src={{get_gravatar_url(team1[1].email)}}>
             <figcaption>
-                {{ team1[1].get_full_name() }}
+                {{ team1[1].full_name }}
             </figcaption>
         </figure>
     </section>
@@ -30,7 +30,7 @@
             <h3>{{ team2[0].ranking }}</h3>
             <img src={{get_gravatar_url(team2[0].email)}}>
             <figcaption>
-                {{ team2[0].get_full_name() }}
+                {{ team2[0].full_name }}
             </figcaption>
         </figure>
 
@@ -38,7 +38,7 @@
             <h3>{{ team2[1].ranking }}</h3>
             <img src={{get_gravatar_url(team2[1].email)}}>
             <figcaption>
-                {{ team2[1].get_full_name() }}
+                {{ team2[1].full_name }}
             </figcaption>
         </figure>
     </section>
