--- a/templates/match.html
+++ b/templates/match.html
@@ -3,7 +3,7 @@
 {% block head %}
 {% endblock %}
 
-{% block body %} 
+{% block body %}
 
 <h1>Matchs</h1>
 {% for match in matchs %}
@@ -14,14 +14,14 @@
         <section>
             <h3>{{ match.score_team_1 }}</h3>
             <figure>
-                <img src={{ get_gravatar_url(match.team_1_player_1.email) }}>
+                <img src={{ match.team_1_player_1.gravatar_url }}>
                 <figcaption>
                     <a href="{{ url_for('profile', id_player=match.team_1_player_1.id_user) }}">{{ match.team_1_player_1.full_name }}</a>
                 </figcaption>
             </figure>
             {% if match.team_1_player_2 %}
             <figure>
-                <img src={{ get_gravatar_url(match.team_1_player_2.email) }}>
+                <img src={{ match.team_1_player_2.gravatar_url }}>
                 <figcaption>
                     <a href="{{ url_for('profile', id_player=match.team_1_player_2.id_user) }}">{{ match.team_1_player_2.full_name }}</a>
                 </figcaption>
@@ -31,14 +31,14 @@
         </section>
             <h3>{{ match.score_team_2 }}</h3>
             <figure>
-                <img src={{ get_gravatar_url(match.team_2_player_1.email) }}>
+                <img src={{ match.team_2_player_1.gravatar_url }}>
                 <figcaption>
                     <a href="{{ url_for('profile', id_player=match.team_2_player_1.id_user) }}">{{ match.team_2_player_1.full_name }}</a>
                 </figcaption>
             </figure>
             {% if match.team_2_player_2 %}
             <figure>
-                <img src={{ get_gravatar_url(match.team_2_player_2.email) }}>
+                <img src={{ match.team_2_player_2.gravatar_url }}>
                 <figcaption>
                     <a href="{{ url_for('profile', id_player=match.team_2_player_2.id_user) }}">{{ match.team_2_player_2.full_name }}</a>
                 </figcaption>
