--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block body %} 
+{% block body %}
 
 <main>
   {{ form }}
@@ -10,7 +10,7 @@
     <section>
         <figure>
             <h3>{{ team1[0].ranking }}</h3>
-            <img src={{get_gravatar_url(team1[0].email)}}>
+            <img src={{ team1[0].gravatar_url }}>
             <figcaption>
                 {{ team1[0].full_name }}
             </figcaption>
@@ -18,17 +18,17 @@
 
         <figure>
             <h3>{{ team1[1].ranking }}</h3>
-            <img src={{get_gravatar_url(team1[1].email)}}>
+            <img src={{ team1[1].gravatar_url }}>
             <figcaption>
                 {{ team1[1].full_name }}
             </figcaption>
         </figure>
     </section>
-    
+
     <section>
         <figure>
             <h3>{{ team2[0].ranking }}</h3>
-            <img src={{get_gravatar_url(team2[0].email)}}>
+            <img src={{ team2[0].gravatar_url }}>
             <figcaption>
                 {{ team2[0].full_name }}
             </figcaption>
@@ -36,7 +36,7 @@
 
         <figure>
             <h3>{{ team2[1].ranking }}</h3>
-            <img src={{get_gravatar_url(team2[1].email)}}>
+            <img src={{ team2[1].gravatar_url }}>
             <figcaption>
                 {{ team2[1].full_name }}
             </figcaption>
