--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,118 +1,106 @@
 {% extends "layout.html" %}
-{% block body %} 
 
+{% block main %}
+  <article>
+    <h2>{{ user.full_name }}</h2>
 
-<article>
-    <header>
-        <h2>{{user.full_name}}</h2>
-        <h3>{{user.nickname}}</h3>
-    </header>
-    
-    <section>
-        <p><img src="{{ user.gravatar_url }}"></p>
-    </section>
-    
-    {% if user.number_of_match != 0 %}
-    
-    <section>
+    <img src="{{ user.gravatar_url }}">
+
+    {% if user.number_of_match %}
+      <section>
+        {# TODO: I can't go further, sorry :'-( #}
         <p><strong>Elo</strong> : {{user.ranking}}</p>
-        <p><strong>Victories :</strong>  {{user.nb_victories}}</p>   
+        <p><strong>Victories :</strong>  {{user.nb_victories}}</p>
         <p><strong>Defeats :</strong> {{user.nb_defeats}}</p>
-        
+
         <figure>
-            <figcaption><strong>Ratio :</strong> {{100*(user.nb_victories/user.number_of_match)| round(2)}}</figcaption>
-           <img src="{{ url_for('svg_victory', id_player=user.id_user) }}"></img>
+          <figcaption><strong>Ratio :</strong> {{100*(user.nb_victories/user.number_of_match)| round(2)}}</figcaption>
+          <img src="{{ url_for('svg_victory', id_player=user.id_user) }}"></img>
         </figure>
-    </section>
-    
-    
-    <section>
+      </section>
+
+      <section>
         <p>
-            <strong>Best Teammate(s) : </strong>
-            {% for user in best_teammate %}
+          <strong>Best Teammate(s) : </strong>
+          {% for user in best_teammate %}
             <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
-            {% else %}
+          {% else %}
             No best Teammate.
-            {% endfor %}
-            <strong>({{best_teammate_coeff}} team victories)</strong> 
+          {% endfor %}
+          <strong>({{best_teammate_coeff}} team victories)</strong> 
         </p>
-        
+
         <p>
-            <strong>Worst Teammate(s) : </strong>
-            {% for user in worst_teammate %}
+          <strong>Worst Teammate(s) : </strong>
+          {% for user in worst_teammate %}
             <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
-            {% else %}
+          {% else %}
             No Worst Teammate.
-            {% endfor %}
-            <strong>({{worst_teammate_coeff}} team defeat(s))</strong> 
+          {% endfor %}
+          <strong>({{worst_teammate_coeff}} team defeat(s))</strong> 
         </p>
         <p>
-            <strong>Nemesis : </strong>
-            {% for user in nemesis %}
+          <strong>Nemesis : </strong>
+          {% for user in nemesis %}
             <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
-            {% else %}
+          {% else %}
             No nemesis.
-            {% endfor %}
-            <strong>({{nemesis_coeff}} defeat(s)))</strong> 
+          {% endfor %}
+          <strong>({{nemesis_coeff}} defeat(s)))</strong> 
         </p>
-    </section>
-    
-    <section>
+      </section>
+
+      <section>
         <h1>Matchs played</h1>
         {% for match in matchs %}
-        <article>
-                <h2>
-                    <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
-                </h2>
-                
-                <section>
-                    <h3>{{ match.score_team_1 }}</h3>
-                    <figure>
-                        <img src={{ match.team_1_player_1.gravatar_url }}>
-                        <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_1_player_1.id_user) }}">{{ match.team_1_player_1.full_name }}</a>
-                        </figcaption>
-                    </figure>
-                    {% if match.team_1_player_2 %}
-                    <figure>
-                        <img src={{ match.team_1_player_2.gravatar_url }}>
-                        <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_1_player_2.id_user) }}">{{ match.team_1_player_2.full_name }}</a>
-                        </figcaption>
-                    </figure>
-                    {% endif %}
-                </section>
-                    
-                <section>
-                    <h3>{{ match.score_team_2 }}</h3>
-                    <figure>
-                        <img src={{ match.team_2_player_1.gravatar_url }}>
-                        <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_2_player_1.id_user) }}">{{ match.team_2_player_1.full_name }}</a>
-                        </figcaption>
-                    </figure>
-                    {% if match.team_2_player_2 %}
-                    <figure>
-                        <img src={{ match.team_2_player_2.gravatar_url }}>
-                        <figcaption>
-                            <a href="{{ url_for('profile', id_player=match.team_2_player_2.id_user) }}">{{ match.team_2_player_2.full_name }}</a>
-                        </figcaption>
-                    </figure>
-                    {% endif %}
-                </section>
-                
-        </article>
+          <article>
+            <h2>
+              <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
+            </h2>
+
+            <section>
+              <h3>{{ match.score_team_1 }}</h3>
+              <figure>
+                <img src={{ match.team_1_player_1.gravatar_url }}>
+                <figcaption>
+                  <a href="{{ url_for('profile', id_player=match.team_1_player_1.id_user) }}">{{ match.team_1_player_1.full_name }}</a>
+                </figcaption>
+              </figure>
+              {% if match.team_1_player_2 %}
+                <figure>
+                  <img src={{ match.team_1_player_2.gravatar_url }}>
+                  <figcaption>
+                    <a href="{{ url_for('profile', id_player=match.team_1_player_2.id_user) }}">{{ match.team_1_player_2.full_name }}</a>
+                  </figcaption>
+                </figure>
+              {% endif %}
+            </section>
+
+            <section>
+              <h3>{{ match.score_team_2 }}</h3>
+              <figure>
+                <img src={{ match.team_2_player_1.gravatar_url }}>
+                <figcaption>
+                  <a href="{{ url_for('profile', id_player=match.team_2_player_1.id_user) }}">{{ match.team_2_player_1.full_name }}</a>
+                </figcaption>
+              </figure>
+              {% if match.team_2_player_2 %}
+                <figure>
+                  <img src={{ match.team_2_player_2.gravatar_url }}>
+                  <figcaption>
+                    <a href="{{ url_for('profile', id_player=match.team_2_player_2.id_user) }}">{{ match.team_2_player_2.full_name }}</a>
+                  </figcaption>
+                </figure>
+              {% endif %}
+            </section>
+
+          </article>
         {% endfor %}
-    </section>
-    
+      </section>
     {% else %}
-    
-    <section>
+      <section>
         <p> Hasn't played yet.</p>
-    </section>
-    
+      </section>
     {% endif %}
-</article>
-
-
-{% endblock %}
+  </article>
+{% endblock main %}
