--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -1,48 +1,47 @@
 {% extends "layout.html" %}
-{% block body %}
 
-<main>
+{# TODO: use (at least) a macro #}
+
+{% block main %}
   {{ form }}
-</main>
 
-<article>
-{% for (team1,team2) in tournament %}
-    <section>
+  <article>
+    {% for (team1, team2) in tournament %}
+      <section>
         <figure>
-            <h3>{{ team1[0].ranking }}</h3>
-            <img src={{ team1[0].gravatar_url }}>
-            <figcaption>
-                {{ team1[0].full_name }}
-            </figcaption>
+          <h3>{{ team1[0].ranking }}</h3>
+          <img src="{{ team1[0].gravatar_url }}">
+          <figcaption>
+            {{ team1[0].full_name }}
+          </figcaption>
         </figure>
 
         <figure>
-            <h3>{{ team1[1].ranking }}</h3>
-            <img src={{ team1[1].gravatar_url }}>
-            <figcaption>
-                {{ team1[1].full_name }}
-            </figcaption>
+          <h3>{{ team1[1].ranking }}</h3>
+          <img src="{{ team1[1].gravatar_url }}">
+          <figcaption>
+            {{ team1[1].full_name }}
+          </figcaption>
         </figure>
-    </section>
+      </section>
 
-    <section>
+      <section>
         <figure>
-            <h3>{{ team2[0].ranking }}</h3>
-            <img src={{ team2[0].gravatar_url }}>
-            <figcaption>
-                {{ team2[0].full_name }}
-            </figcaption>
+          <h3>{{ team2[0].ranking }}</h3>
+          <img src="{{ team2[0].gravatar_url }}">
+          <figcaption>
+            {{ team2[0].full_name }}
+          </figcaption>
         </figure>
 
         <figure>
-            <h3>{{ team2[1].ranking }}</h3>
-            <img src={{ team2[1].gravatar_url }}>
-            <figcaption>
-                {{ team2[1].full_name }}
-            </figcaption>
+          <h3>{{ team2[1].ranking }}</h3>
+          <img src="{{ team2[1].gravatar_url }}">
+          <figcaption>
+            {{ team2[1].full_name }}
+          </figcaption>
         </figure>
-    </section>
-{% endfor %}
-</article>
-
-{% endblock %}
+      </section>
+    {% endfor %}
+  </article>
+{% endblock main %}
